src/components/styles/lightcurve.css
.plot-tooltip-container {
  position: absolute;
  background-color: white;
  opacity: 0.8;
  border: 2px solid #c0c1c1;
  z-index: 1;
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
}

.plot-tooltip-container:hover {
  opacity: 1;
}

.flux-cutout {
  width: 128px;
  height: 128px;
  image-rendering: crisp-edges;
}

.plot-tooltip-header-container,
.plot-tooltip-content-container {
  display: flex;
}

.plot-tooltip-header-container {
  padding: 0 2px;
  justify-content: space-between;
  color: white;
  align-items: center;
  column-gap: 0.25em;
}

.plot-tooltip-content-container {
  flex-direction: column;
  align-items: center;
  row-gap: 0.25em;
  margin: 0 0.5em 0.5em 0.5em;
}

.plot-marker-data {
  align-self: start;
  font-size: 12px;
}

.plot-tooltip-header-container > h4 {
  font-size: 14px;
}

.plot-tooltip-header-container > h4,
.plot-marker-data > p {
  margin: 0;
}

.plot-tooltip-header-container > button {
  width: 1.5em;
  padding: 0;
  font-size: 10px;
}

.plot-marker-data > p > span {
  font-weight: 800;
  margin-right: 5px;
}

.not-found.flux-cutout {
  border: 1px solid #c0c1c1;
  display: flex;
  text-align: center;
  align-items: center;
  font-weight: 600;
}

.lightcurve-container {
  overflow: hidden;
  border-radius: 10px;
  border: 1px solid #c4c8cb;
  width: fit-content;
  margin-bottom: 1.25em;
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
}

.download-cutout-container {
  display: flex;
  flex-direction: column;
  column-gap: 0.5em;
  align-self: flex-start;
}

.download-cutout-label {
  font-size: 10px;
  padding: 0;
  margin: 0;
  font-weight: bold;
}

.select-cutout-format {
  font-size: 11px;
  width: 55px;
}

.download-cutout-controls {
  display: flex;
  column-gap: 0.25em;
}

.download-cutout-controls > button {
  font-size: 11px;
}

.flagged-marker-legend {
  position: absolute;
  z-index: 1;
  margin: 30px 0 0 14px;
  font-size: 11px;
  display: flex;
  align-items: center;
  column-gap: 0.5em;
}

.flagged-marker {
  width: 5px;
  height: 5px;
  border: 2px solid red;
  border-radius: 50%;
}

